2012-04-30 Pierrick Caillon <pierrick@in-cite.net>
	* Fix: Corrected provider property in pi1 constants to providers as expected by setup.

2012-04-16 Emilie Sagniez <emilie@in-cite.net>
	* Version changed to 1.1.0

2012-04-02 Emilie Sagniez <emilie@in-cite.net>
	* Feature: Add possibility to choose between checkbox or selector box for tags list
	* Feature: add data list accessibility

2012-03-22 Pierrick Caillon <pierrick@in-cite.net>
	* Bug fix: inverted latitude and longitude usage in jmap3 init call.
	* Bug fix: invalid context using ics.Map property markerEvents.
	* Bug fix: jQuery compatibility ($ was used in some places).
	* Bug fix: missing variable in closure.
	* Fix: script cleanup (missing semicolon, json syntax...).
	* Fix: jQuery.each usage instead of for-loop on arrays.
	* Fix: remove tag icon when not defined.

2012-03-20 Emilie Sagniez <emilie@in-cite.net>
	* Version changed to 1.0.0

2012-03-20 Emilie Sagniez <emilie@in-cite.net>
	* Add Provider taglist hook (flexform additionnal fields) and xclass declaration 
	* Dynamic flex class: replace new $ class by makeInstance (for xclass implementation)
	* gmap3.js: correct centerMapDefault function
	* Change TagList variables names in conflict with hierarchical tag list, and correct rezise to resize
	* Exploded TagList viewDefaultsTags and hideExclusivesTags functions 

2012-03-08 Pierrick Caillon <pierrick@in-cite.net>
	* Bug fix: No ROOT element in an added flexform sheet.

2012-02-20 Emilie Sagniez <emilie@in-cite.net>
	* Add Typoscript Configuration
	* Merge TS Configuration with Flexform Configuration
	* Create new javascript function to ics.TagList: addToContainer
	* Move static/gmap3/ to pi1/static/

2012-01-25 Emilie Sagniez <emilie@in-cite.net>
	* Changed tt_address coordinates field to two fields: latitude and longitude
WARNING: In case of update, the two new fields must be filled my the corresponding value for the old field.